2005-11-21  Thomas Wood  <thos@gnome.org>

	* NEWS:
	* configure.ac:

	Update for 2.7.0 release

2005-11-21  Thomas Wood  <thos@gnome.org>

	* engines/crux/src/crux-common.h:
	* engines/crux/src/crux-draw.c: (crux_paint_gradient),
	(draw_shadow), (draw_box), (draw_slider):
	* engines/crux/src/crux-main.c: (theme_init):
	* engines/crux/src/crux-rc-parser.c:
	* engines/crux/src/crux-rc-style.c:

	- Applied crux patch from bug 321140
	- General gradients now drawn using cairo

2005-11-16  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_entry): Draw inner focus ring on GtkEntry.

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c: (cl_progressbar_add),
	(cl_checks_remove), (cl_update_checks), (cl_checks_known),
	(cl_checks_timer_func), (cl_checks_toggled),
	(clearlooks_set_widget_parameters), (draw_flat_box), (draw_check),
	(clearlooks_style_unrealize):

	Checkmarks now animate, too. Thanks once again to Kulyk Nazar (tirpse)!
	Properly disconnecting signals from progressbars and check boxes, I hope. 

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_unrealize):

	Don't update the progressbars after unloading the engine.

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c:
	(clearlooks_draw_progressbar_fill):
	* engines/clearlooks/src/clearlooks_draw.h:
	* engines/clearlooks/src/clearlooks_style.c:
	(cl_progressbar_remove), (update_progressbar), (timer_func),
	(cl_progressbar_known), (cl_progressbar_add), (draw_box),
	(clearlooks_style_init_from_rc):

	Added animating progressbar, thanks to Kulyk Nazar (tirpse)!

2005-11-13  Richard A. Stellingwerff  <remenic@gmail.com>

	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_init_from_rc):
	* engines/clearlooks/src/clearlooks_style.h:
